# kiro-first-project

./: README.md  first_project.py  pyproject.toml
.kiro/specs/cli-task-manager/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
task_manager/: __init__.py  cli.py  display.py  models.py  operations.py  storage.py
tests/: __init__.py  test_cli.py  test_display.py  test_models.py  test_operations.py  test_storage.py
