[project]
name = "cli-task-manager"
version = "0.1.0"
description = "A CLI task manager with interactive menu and JSON persistence."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "hypothesis>=6.100.0",
    "ruff>=0.4.0",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
